--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(socks)
 
 find_package(Threads)
 
-add_executable(socks src/socks.c src/net.c src/peer.c src/log.c src/mem.c)
+#add_executable(socks src/socks.c src/net.c src/peer.c src/log.c src/mem.c)
+add_executable(socks src/socks.cxx src/server.cxx)
 target_link_libraries(socks Threads::Threads)
