--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ project(socks)
 find_package(Threads)
 
 #add_executable(socks src/socks.c src/net.c src/peer.c src/log.c src/mem.c)
-add_executable(socks src/socks.cxx src/server.cxx)
+add_executable(socks src/socks.cxx src/server.cxx src/log.cxx)
 target_link_libraries(socks Threads::Threads)
